--- a/src/app/pages/direct-message/direct-message.component.scss
+++ b/src/app/pages/direct-message/direct-message.component.scss
@@ -121,6 +121,10 @@ section {
   display: flex;
   flex-direction: column;
   overflow-y: auto;
+
+  @include iphoneProMax() {
+    max-height: 440px;
+  }
 }
 
 h3 {
